--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -37,30 +37,30 @@ auth_8 : "┗ ᴛᴀʀᴀғıɴᴅᴀɴ ᴇᴋʟᴇɴᴅɪ:-"
 
 # PLUGINS - Admins
 admin_1 : "🎧 ᴍᴜ̈ᴢɪᴋ ᴢᴀᴛᴇɴ ᴅᴜʀᴀᴋʟᴀᴛıʟᴅı."
-admin_2 : "🎧 Sesli Sohbet Duraklatıldı {}!"
-admin_3 : "Müzik zaten yeniden başlatıldı."
-admin_4 : "🎧 Sesli Sohbeti Sürdüren {}!"
-admin_5 : "Müziğin sesi zaten kapalı."
-admin_6 : "🎧 Sesli Sohbetin Sesi Kapatıldı {}!"
-admin_7 : "Müziğin sesi zaten açıldı."
-admin_8 : "🎧 Sesli Sohbetin Sesi Açıldı {}!"
-admin_9 : "🎧 **Sesli Sohbeti Bitiren/Durduran {} 🔮**"
-admin_10 : "🎧 Sesli Sohbet {} tarafından atlandı!. Sırada Artık Müzik Yok. 🔮"
-admin_11 : "Akış **{0}** olarak değiştirilirken hata oluştu\n\nLütfen /atla komutunu tekrar kullanın."
-admin_12 : "Döngü çalmanın etkinleştirilmesi nedeniyle belirli bir parçaya geçilemiyor. Bu özelliği kullanmak için lütfen döngüsel oynatmayı `/dongu disable` üzerinden devre dışı bırakın."
-admin_13 : "Lütfen 1, 2 veya 4 gibi belirli parçalar için sayısal sayılar kullanın. 🔮"
-admin_14 : "Belirli bir numaraya atlamak için sırada en az 2 parça gerekir. /queue ile sırayı kontrol et 🔮"
-admin_15 : "Verdiğiniz değer için sırada yeterli parça yok. Lütfen 1 ile {0} arasında bir sayı seçin"
-admin_16 : "Belirli bir parçaya geçilemedi.\n\nSırayı /sira İle Kontrol Edin"
-admin_17 : "{0}.. Lütfen bekleyin. 🔮"
-admin_18 : "Yönetici Listesi Bulunamadı\n\nLütfen yönetici listesini /admincache veya /reload yoluyla yeniden yükleyin. 🔮"
-admin_19 : "Bunu gerçekleştirmek için sesli sohbet haklarına sahip yönetici olmanız gerekir.\nZaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin. 🔮"
-admin_20 : "**Yönetici önbelleği başarıyla yeniden yüklendi.** 🔮"
-admin_21 : "Sırada karıştırılacak bir şey yok ❌"
-admin_22 : "Karıştırılamadı.\n\nSırayı kontrol edin: /sira"
-admin_23 : "**Sıra Karıştırıldı: {0}**\n\nKarıştırılan sırayı kontrol edin: /sira"
-admin_24 : "**Kullanım:**\n/dongu [1-10 arası sayı]\n\n**Örnek:** /dongu 5"
-admin_25 : "Döngü, {0} tarafından **{1}** kez etkinleştirildi. Bot şimdi sesli sohbette çalmakta olan müziği **{1}** kez tekrarlayacak. 🔮"
+admin_2 : "🎧 sᴇsʟɪ sᴏʜʙᴇᴛ ᴅᴜʀᴀᴋʟᴀᴛıʟᴅı {}!"
+admin_3 : "✅ ᴍᴜ̈ᴢɪᴋ ᴢᴀᴛᴇɴ ʏᴇɴɪᴅᴇɴ ʙᴀşʟᴀᴛıʟᴅı."
+admin_4 : "🎧 sᴇsʟɪ sᴏʜʙᴇᴛɪ sᴜ̈ʀᴅᴜ̈ʀᴇɴ {}!"
+admin_5 : "✅ ᴀsɪsᴛᴀɴıɴ sᴇsɪ ᴢᴀᴛᴇɴ ᴋᴀᴘᴀʟı."
+admin_6 : "🎧 sᴇsʟɪ sᴏʜʙᴇᴛɪɴ sᴇsɪ ᴋᴀᴘᴀᴛıʟᴅı {}!"
+admin_7 : "✅ ᴍᴜ̈ᴢɪɢ̆ɪɴ sᴇsɪ ᴢᴀᴛᴇɴ ᴀᴄ̧ıʟᴅı."
+admin_8 : "🎧 sᴇsʟɪ sᴏʜʙᴇᴛɪɴ sᴇsɪ ᴀᴄ̧ıʟᴅı {}!"
+admin_9 : "🎧 **sᴇsʟɪ sᴏʜʙᴇᴛɪ ʙɪᴛɪʀᴇɴ/ᴅᴜʀᴅᴜʀᴀɴ {} 🔮**"
+admin_10 : "🎧 sᴇsʟɪ sᴏʜʙᴇᴛ {} ᴛᴀʀᴀғıɴᴅᴀɴ ᴀᴛʟᴀɴᴅı!. sıʀᴀᴅᴀ ᴀʀᴛıᴋ ᴘᴀʀᴄ̧ᴀ ʏᴏᴋ. 🔮"
+admin_11 : "ᴀᴋış **{0}** ᴏʟᴀʀᴀᴋ ᴅᴇɢ̆ɪşᴛɪʀɪʟɪʀᴋᴇɴ ʜᴀᴛᴀ ᴏʟᴜşᴛᴜ.\n\nʟᴜ̈ᴛғᴇɴ /ᴀᴛʟᴀ ᴋᴏᴍᴜᴛᴜɴᴜ ᴛᴇᴋʀᴀʀ ᴋᴜʟʟᴀɴıɴ."
+admin_12 : "ᴅᴏ̈ɴɢᴜ̈ ᴄ̧ᴀʟᴍᴀɴıɴ ᴇᴛᴋɪɴʟᴇşᴛɪʀɪʟᴍᴇsɪ ɴᴇᴅᴇɴɪʏʟᴇ ʙᴇʟɪʀʟɪ ʙɪʀ ᴘᴀʀᴄ̧ᴀʏᴀ ɢᴇᴄ̧ɪʟᴇᴍɪʏᴏʀ. ʙᴜ ᴏ̈ᴢᴇʟʟɪɢ̆ɪ ᴋᴜʟʟᴀɴᴍᴀᴋ ɪᴄ̧ɪɴ ʟᴜ̈ᴛғᴇɴ ᴅᴏ̈ɴɢᴜ̈sᴇʟ ᴏʏɴᴀᴛᴍᴀʏı `/ᴅᴏɴɢᴜ ᴅɪsᴀʙʟᴇ` ᴜ̈ᴢᴇʀɪɴᴅᴇɴ ᴅᴇᴠʀᴇ ᴅışı ʙıʀᴀᴋıɴ."
+admin_13 : "ʟᴜ̈ᴛғᴇɴ 𝟷, 𝟸 ᴠᴇʏᴀ 𝟺 ɢɪʙɪ ʙᴇʟɪʀʟɪ ᴘᴀʀᴄ̧ᴀʟᴀʀ ɪᴄ̧ɪɴ sᴀʏısᴀʟ sᴀʏıʟᴀʀ ᴋᴜʟʟᴀɴıɴ. 🔮"
+admin_14 : "ʙᴇʟɪʀʟɪ ʙɪʀ ɴᴜᴍᴀʀᴀʏᴀ ᴀᴛʟᴀᴍᴀᴋ ɪᴄ̧ɪɴ sıʀᴀᴅᴀ ᴇɴ ᴀᴢ 𝟸 ᴘᴀʀᴄ̧ᴀ ɢᴇʀᴇᴋɪʀ. /ǫᴜᴇᴜᴇ ɪʟᴇ sıʀᴀʏı ᴋᴏɴᴛʀᴏʟ ᴇᴛ 🔮"
+admin_15 : "ᴠᴇʀᴅɪɢ̆ɪɴɪᴢ ᴅᴇɢ̆ᴇʀ ɪᴄ̧ɪɴ sıʀᴀᴅᴀ ʏᴇᴛᴇʀʟɪ ᴘᴀʀᴄ̧ᴀ ʏᴏᴋ. ʟᴜ̈ᴛғᴇɴ 𝟷 ɪʟᴇ {0} ᴀʀᴀsıɴᴅᴀ ʙɪʀ sᴀʏı sᴇᴄ̧ɪɴ."
+admin_16 : "ʙᴇʟɪʀʟɪ ʙɪʀ ᴘᴀʀᴄ̧ᴀʏᴀ ɢᴇᴄ̧ɪʟᴇᴍᴇᴅɪ.\n\nsɪʀᴀʏɪ /sɪʀᴀ ɪ̇ʟᴇ ᴋᴏɴᴛʀᴏʟ ᴇᴅɪɴ"
+admin_17 : "{0}.. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ. 🔮"
+admin_18 : "ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪ ʙᴜʟᴜɴᴀᴍᴀᴅı\n\nʟᴜ̈ᴛғᴇɴ ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪɴɪ /ᴀᴅᴍɪɴᴄᴀᴄʜᴇ ᴠᴇʏᴀ /ʀᴇʟᴏᴀᴅ ʏᴏʟᴜʏʟᴀ ɢᴜ̈ɴᴄᴇʟʟᴇʏɪɴ. 🔮"
+admin_19 : "ʙᴜɴᴜ ɢᴇʀᴄ̧ᴇᴋʟᴇşᴛɪʀᴍᴇᴋ ɪᴄ̧ɪɴ sᴇsʟɪ sᴏʜʙᴇᴛ ʜᴀᴋʟᴀʀıɴᴀ sᴀʜɪᴘ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴏʟᴍᴀɴıᴢ ɢᴇʀᴇᴋɪʀ.\nᴢᴀᴛᴇɴ ʏᴏ̈ɴᴇᴛɪᴄɪʏsᴇɴɪᴢ, /ᴀᴅᴍɪɴᴄᴀᴄʜᴇ ᴀʀᴀᴄıʟıɢ̆ıʏʟᴀ ᴀᴅᴍɪɴᴄᴀᴄʜᴇ'ɪ ʏᴇɴɪᴅᴇɴ ʏᴜ̈ᴋʟᴇʏɪɴ. 🔮"
+admin_20 : "**⟲ ʏᴏ̈ɴᴇᴛɪᴄɪ ʟɪsᴛᴇsɪ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ\n⟲ ʙᴏᴛ ɢᴜ̈ɴᴄᴇʟʟᴇɴᴅɪ** 🔮"
+admin_21 : "sıʀᴀᴅᴀ ᴋᴀʀışᴛıʀıʟᴀᴄᴀᴋ ʙɪʀ şᴇʏ ʏᴏᴋ ❌"
+admin_22 : "ᴋᴀʀışᴛıʀıʟᴀᴍᴀᴅı.\n\nsıʀᴀʏı ᴋᴏɴᴛʀᴏʟ ᴇᴅɪɴ: /sɪʀᴀ"
+admin_23 : "**sıʀᴀ ᴋᴀʀışᴛıʀıʟᴅı: {0}**\n\nᴋᴀʀışᴛıʀıʟᴀɴ sıʀᴀʏı ᴋᴏɴᴛʀᴏʟ ᴇᴅɪɴ: /sɪʀᴀ"
+admin_24 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/ᴅᴏɴɢᴜ [𝟷-𝟷𝟶 ᴀʀᴀsı sᴀʏı]\n\n**ᴏ̈ʀɴᴇᴋ:** /ᴅᴏɴɢᴜ 𝟻"
+admin_25 : "ᴅᴏ̈ɴɢᴜ̈, {0} ᴛᴀʀᴀғıɴᴅᴀɴ **{1}** ᴋᴇᴢ ᴇᴛᴋɪɴʟᴇşᴛɪʀɪʟᴅɪ. ʙᴏᴛ şɪᴍᴅɪ sᴇsʟɪ sᴏʜʙᴇᴛᴛᴇ ᴄ̧ᴀʟᴍᴀᴋᴛᴀ ᴏʟᴀɴ ᴍᴜ̈ᴢɪɢ̆ɪ **{1}** ᴋᴇᴢ ᴛᴇᴋʀᴀʀʟᴀʏᴀᴄᴀᴋ. 🔮"
 admin_26 : "Döngü oynatma için lütfen 1-10 arasındaki sayıları kullanın"
 admin_27 : "Döngü Oynatma devre dışı bırakıldı. 🔮"
 admin_28 : "**Kullanım:**\n/ilerisar : Müziği İleri Sarar. (Örnek: /ilerisar 15 İle Çalan Müziği 15 Saniye İleri Alabilirsiniz.)"
