--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -89,18 +89,18 @@ help_2 : "**ʏᴀʀᴅıᴍ ɪ̇ᴄ̧ɪ̇ɴ ʙᴜᴛᴏɴᴀ ᴛıᴋʟᴀʏıɴ
 # Settings
 setting_1 : "⚙️ **ᴍᴜ̈ᴢɪᴋ ʙᴏᴛᴜ ᴀʏᴀʀʟᴀʀɪ**\n\n🔮**ᴅᴜ̈ᴢᴇɴʟᴇᴍᴇᴋ ᴠᴇʏᴀ ᴅᴇɢ̆ɪşᴛɪʀᴍᴇᴋ ɪ̇sᴛᴇᴅɪɢ̆ɪɴɪᴢ ᴀʏᴀʀʟᴀʀı ᴀşᴀɢ̆ıᴅᴀɴ ʙᴜᴛᴏɴʟᴀʀı ᴋᴜʟʟᴀɴᴀʀᴀᴋ ᴀʏᴀʀʟᴀʏᴀʙɪʟɪʀsɪɴɪᴢ.**"
 setting_3 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n1) ᴅᴏɢ̆ʀᴜᴅᴀɴ: ᴀʀᴀᴍᴀ sᴏʀɢᴜʟᴀʀıɴı ᴅᴏɢ̆ʀᴜᴅᴀɴ ᴏʏɴᴀᴛıʀ. ᴠɪᴅᴇᴏʟᴀʀı ᴅᴏɢ̆ʀᴜᴅᴀɴ ᴍᴏᴅᴅᴀ ᴏʏɴᴀᴛᴍᴀᴋ ɪᴄ̧ɪɴ -ᴠ ᴋᴜʟʟᴀɴıɴ.\n\n2) sᴀᴛıʀ ɪ̇ᴄ̧ɪ̇: ᴠɪᴅᴇᴏ ᴠᴇ sᴇs ᴀʀᴀsıɴᴅᴀ sᴇᴄ̧ɪᴍ ʏᴀᴘᴍᴀᴋ ɪᴄ̧ɪɴ sᴀᴛıʀ ɪ̇ᴄ̧ɪ ɪ̇şᴀʀᴇᴛʟᴇᴍᴇ ᴅᴜ̈ɢ̆ᴍᴇʟᴇʀɪɴɪ ᴅᴏ̈ɴᴅᴜ̈ʀᴜ̈ʀ. 🔮"
-setting_4 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n👥 Herkes: Bu grupta bulunan yönetici komutlarını (skip, pause, resume vb.) herkes kullanabilir.\n\n🙍 Yalnızca Yönetici: Yalnızca yöneticiler ve yetkili kullanıcılar yönetici komutlarını kullanabilir."
-setting_5 : "Yetkili Kullanıcı Bulunamadı\n\nYönetici olmayan herhangi bir kişinin /auth ile yönetici komutlarımı kullanmasına ve /unauth kullanarak kullanmamasına izin verebilirsiniz"
-setting_9 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nEtkinleştirildiğinde Bot, sohbetinizi temiz ve anlaşılır kılmak için {0} tarihinden sonra mesajını siler.."
-setting_10 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n1) Grup: Komutun verildiği gruptaki müziği çalar.\n\n2) Kanal: İstediğiniz kanaldaki müziği çalar. /channelplay ile kanal kimliğini ayarla"
-setting_11 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n1) Herkes: Bu grupta bulunan herkes burada müzik çalabilir.\n\n2) Yalnızca Yönetici: Bu gruptaki müziği yalnızca yöneticiler çalabilir."
-setting_12 : "❌ Kanal modu için tanımlanmış kanal kimliğiniz yok. Lütfen /channelplay ile tanımlayın."
-setting_13 : "Etkin grup aramasında oynatma modu değiştirilemez. Lütfen önce /stop ile sesli sohbeti durdurun."
-setting_14 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nEtkinleştirildiğinde, Bot yürütülen komutları (/play, /pause, /stop vb.) hemen siler.\n\nBot, bunun düzgün çalışması için mesajları silme yetkisine sahip olmalıdır."
-setting_15 : "Eş çözümlenemedi, Kanalınıza bot eklediğinizden ve onu yönetici olarak terfi ettirdiğinizden emin olun.\n\n/channelplay'i tekrar ayarlamayı deneyin..."
-setting_16 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nAktive Ettiğiniz Zaman Bot 2 Saatte Bir Botun Nasıl Kullanılacağı İle İlgili İpuçları Verir."
+setting_4 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n👥 ʜᴇʀᴋᴇs: ʙᴜ ɢʀᴜᴘᴛᴀ ʙᴜʟᴜɴᴀɴ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴋᴏᴍᴜᴛʟᴀʀıɴı (sᴋɪᴘ, ᴘᴀᴜsᴇ, ʀᴇsᴜᴍᴇ ᴠʙ.) ʜᴇʀᴋᴇs ᴋᴜʟʟᴀɴᴀʙɪʟɪʀ.\n\n🙍 ʏᴀʟɴıᴢᴄᴀ ʏᴏ̈ɴᴇᴛɪᴄɪ: ʏᴀʟɴıᴢᴄᴀ ʏᴏ̈ɴᴇᴛɪᴄɪʟᴇʀ ᴠᴇ ʏᴇᴛᴋɪʟɪ ᴋᴜʟʟᴀɴıᴄıʟᴀʀ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴋᴏᴍᴜᴛʟᴀʀıɴı ᴋᴜʟʟᴀɴᴀʙɪʟɪʀ."
+setting_5 : "ʏᴇᴛᴋɪʟɪ ᴋᴜʟʟᴀɴıᴄı ʙᴜʟᴜɴᴀᴍᴀᴅı\n\nʏᴏ̈ɴᴇᴛɪᴄɪ ᴏʟᴍᴀʏᴀɴ ʜᴇʀʜᴀɴɢɪ ʙɪʀ ᴋɪşɪɴɪɴ /ᴀᴜᴛʜ ɪʟᴇ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴋᴏᴍᴜᴛʟᴀʀıᴍı ᴋᴜʟʟᴀɴᴍᴀsıɴᴀ ᴠᴇ /ᴜɴᴀᴜᴛʜ ᴋᴜʟʟᴀɴᴀʀᴀᴋ ᴋᴜʟʟᴀɴᴍᴀᴍᴀsıɴᴀ ɪᴢɪɴ ᴠᴇʀᴇʙɪʟɪʀsɪɴɪᴢ."
+setting_9 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nᴇᴛᴋɪɴʟᴇşᴛɪʀɪʟᴅɪɢ̆ɪɴᴅᴇ ʙᴏᴛ, sᴏʜʙᴇᴛɪɴɪᴢɪ ᴛᴇᴍɪᴢ ᴠᴇ ᴀɴʟᴀşıʟıʀ ᴋıʟᴍᴀᴋ ɪᴄ̧ɪɴ {0} ᴛᴀʀɪʜɪɴᴅᴇɴ sᴏɴʀᴀ ᴍᴇsᴀᴊıɴı sɪʟᴇʀ.."
+setting_10 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n1) ɢʀᴜᴘ: ᴋᴏᴍᴜᴛᴜɴ ᴠᴇʀɪʟᴅɪɢ̆ɪ ɢʀᴜᴘᴛᴀᴋɪ ᴍᴜ̈ᴢɪɢ̆ɪ ᴄ̧ᴀʟᴀʀ.\n\n2) ᴋᴀɴᴀʟ: ɪ̇sᴛᴇᴅɪɢ̆ɪɴɪᴢ ᴋᴀɴᴀʟᴅᴀᴋɪ ᴍᴜ̈ᴢɪɢ̆ɪ ᴄ̧ᴀʟᴀʀ. /ᴄʜᴀɴɴᴇʟᴘʟᴀʏ ɪʟᴇ ᴋᴀɴᴀʟ ᴋɪᴍʟɪɢ̆ɪɴɪ ᴀʏᴀʀʟᴀ."
+setting_11 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\n1) ʜᴇʀᴋᴇs: ʙᴜ ɢʀᴜᴘᴛᴀ ʙᴜʟᴜɴᴀɴ ʜᴇʀᴋᴇs ʙᴜʀᴀᴅᴀ ᴍᴜ̈ᴢɪᴋ ᴄ̧ᴀʟᴀʙɪʟɪʀ.\n\n2) ʏᴀʟɴıᴢᴄᴀ ʏᴏ̈ɴᴇᴛɪᴄɪ: ʙᴜ ɢʀᴜᴘᴛᴀᴋɪ ᴍᴜ̈ᴢɪɢ̆ɪ ʏᴀʟɴıᴢᴄᴀ ʏᴏ̈ɴᴇᴛɪᴄɪʟᴇʀ ᴄ̧ᴀʟᴀʙɪʟɪʀ."
+setting_12 : "❌ ᴋᴀɴᴀʟ ᴍᴏᴅᴜ ɪᴄ̧ɪɴ ᴛᴀɴıᴍʟᴀɴᴍış ᴋᴀɴᴀʟ ᴋɪᴍʟɪɢ̆ɪɴɪᴢ ʏᴏᴋ. ʟᴜ̈ᴛғᴇɴ /ᴄʜᴀɴɴᴇʟᴘʟᴀʏ ɪʟᴇ ᴛᴀɴıᴍʟᴀʏıɴ."
+setting_13 : "ᴇᴛᴋɪɴ ɢʀᴜᴘ ᴀʀᴀᴍᴀsıɴᴅᴀ ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ ᴅᴇɢ̆ɪşᴛɪʀɪʟᴇᴍᴇᴢ. ʟᴜ̈ᴛғᴇɴ ᴏ̈ɴᴄᴇ /sᴛᴏᴘ ɪʟᴇ sᴇsʟɪ sᴏʜʙᴇᴛɪ ᴅᴜʀᴅᴜʀᴜɴ."
+setting_14 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nᴇᴛᴋɪɴʟᴇşᴛɪʀɪʟᴅɪɢ̆ɪɴᴅᴇ, ʙᴏᴛ ʏᴜ̈ʀᴜ̈ᴛᴜ̈ʟᴇɴ ᴋᴏᴍᴜᴛʟᴀʀı (/ᴘʟᴀʏ, /ᴘᴀᴜsᴇ, /sᴛᴏᴘ ᴠʙ.) ʜᴇᴍᴇɴ sɪʟᴇʀ.\n\nʙᴏᴛ, ʙᴜɴᴜɴ ᴅᴜ̈ᴢɢᴜ̈ɴ ᴄ̧ᴀʟışᴍᴀsı ɪᴄ̧ɪɴ ᴍᴇsᴀᴊʟᴀʀı sɪʟᴍᴇ ʏᴇᴛᴋɪsɪɴᴇ sᴀʜɪᴘ ᴏʟᴍᴀʟıᴅıʀ."
+setting_15 : "ᴇş ᴄ̧ᴏ̈ᴢᴜ̈ᴍʟᴇɴᴇᴍᴇᴅɪ, ᴋᴀɴᴀʟıɴıᴢᴀ ʙᴏᴛ ᴇᴋʟᴇᴅɪɢ̆ɪɴɪᴢᴅᴇɴ ᴠᴇ ᴏɴᴜ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴏʟᴀʀᴀᴋ ᴛᴇʀғɪ ᴇᴛᴛɪʀᴅɪɢ̆ɪɴɪᴢᴅᴇɴ ᴇᴍɪɴ ᴏʟᴜɴ.\n\n/ᴄʜᴀɴɴᴇʟᴘʟᴀʏ'ɪ ᴛᴇᴋʀᴀʀ ᴀʏᴀʀʟᴀᴍᴀʏı ᴅᴇɴᴇʏɪɴ..."
+setting_16 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nᴀᴋᴛɪғ ᴇᴛᴛɪɢ̆ɪɴɪᴢ ᴢᴀᴍᴀɴ ʙᴏᴛ 𝟸 sᴀᴀᴛᴛᴇ ʙɪʀ ʙᴏᴛᴜɴ ɴᴀsıʟ ᴋᴜʟʟᴀɴıʟᴀᴄᴀɢ̆ı ɪ̇ʟᴇ ɪ̇ʟɢɪʟɪ ɪ̇ᴘᴜᴄ̧ʟᴀʀı ᴠᴇʀɪʀ."
 
-set_cb_1 : "Ses Kalitesi Paneli 🔈"
+set_cb_1 : "sᴇs ᴋᴀʟɪᴛᴇsɪ ᴘᴀɴᴇʟɪ 🔈"
 set_cb_2 : "Video Kalitesi Paneli 📽️"
 set_cb_3 : "İzinli Kullanıcılar Paneli 👥"
 set_cb_4 : "Oynatma Modu Paneli ▶️"
