--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -101,35 +101,35 @@ setting_15 : "ᴇş ᴄ̧ᴏ̈ᴢᴜ̈ᴍʟᴇɴᴇᴍᴇᴅɪ, ᴋᴀɴᴀʟı
 setting_16 : "⁉️ ʙᴜ ɴᴇᴅɪʀ?\n\nᴀᴋᴛɪғ ᴇᴛᴛɪɢ̆ɪɴɪᴢ ᴢᴀᴍᴀɴ ʙᴏᴛ 𝟸 sᴀᴀᴛᴛᴇ ʙɪʀ ʙᴏᴛᴜɴ ɴᴀsıʟ ᴋᴜʟʟᴀɴıʟᴀᴄᴀɢ̆ı ɪ̇ʟᴇ ɪ̇ʟɢɪʟɪ ɪ̇ᴘᴜᴄ̧ʟᴀʀı ᴠᴇʀɪʀ."
 
 set_cb_1 : "sᴇs ᴋᴀʟɪᴛᴇsɪ ᴘᴀɴᴇʟɪ 🔈"
-set_cb_2 : "Video Kalitesi Paneli 📽️"
-set_cb_3 : "İzinli Kullanıcılar Paneli 👥"
-set_cb_4 : "Oynatma Modu Paneli ▶️"
-set_cb_5 : "Temizleme Modu Paneli 🧹"
-set_cb_6 : "Değişiklikleri Ayarla ✅"
-set_cb_7 : "İzinli Kullanıcı Listesi Alınıyor.. LÜTFEN BEKLEYİNİZ. 🔮"
-set_cb_8 : "Geri Alınıyor ♻️"
+set_cb_2 : "ᴠɪᴅᴇᴏ ᴋᴀʟɪᴛᴇsɪ ᴘᴀɴᴇʟɪ 📽️"
+set_cb_3 : "ɪ̇ᴢɪ̇ɴʟɪ̇ ᴋᴜʟʟᴀɴıᴄıʟᴀʀ ᴘᴀɴᴇʟɪ 👥"
+set_cb_4 : "ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ ᴘᴀɴᴇʟɪ ▶️"
+set_cb_5 : "ᴛᴇᴍɪᴢʟᴇᴍᴇ ᴍᴏᴅᴜ ᴘᴀɴᴇʟɪ 🧹"
+set_cb_6 : "ᴅᴇɢ̆ɪşɪᴋʟɪᴋʟᴇʀɪ ᴀʏᴀʀʟᴀ ✅"
+set_cb_7 : "ɪ̇ᴢɪɴʟɪ ᴋᴜʟʟᴀɴıᴄı ʟɪsᴛᴇsɪ ᴀʟıɴıʏᴏʀ.. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪ̇ɴɪ̇ᴢ. 🔮"
+set_cb_8 : "ɢᴇʀɪ ᴀʟıɴıʏᴏʀ ♻️"
 
 # Misc
-ustats_1 : "Kullanıcı istatistikleri bulunamadı. 😔"
-ustats_2 : "Güzel!, Şu Ana Kadar **{0}** Parçayı **{1}** Kez Oynattın.\n\nTop {2} Parçan:\n\n"
+ustats_1 : "ᴋᴜʟʟᴀɴıᴄı ɪsᴛᴀᴛɪsᴛɪᴋʟᴇʀɪ ʙᴜʟᴜɴᴀᴍᴀᴅı. 😔"
+ustats_2 : "ɢᴜ̈ᴢᴇʟ!, şᴜ ᴀɴᴀ ᴋᴀᴅᴀʀ **{0}** ᴘᴀʀᴄ̧ᴀʏı **{1}** ᴋᴇᴢ ᴏʏɴᴀᴛᴛıɴ.\n\nᴛᴏᴘ {2} ᴘᴀʀᴄ̧ᴀɴ:\n\n"
 
-gstats_1 : "**Global İstatistikler Geliyor, Bu Biraz Zaman Alabilir...** 🔮"
-gstats_2 : "İstatistik Bulunamadı."
-gstats_3 : "**Global Top 10 {0} , Bu Biraz Zaman Alabilir...** ❄️"
-gstats_4 : "**Bottaki Toplam İşlem Sayısı:** {0}\n\n{1} Şu Ana Kadar **{2}** Parçayı **{3}** Kez Çaldı.\n\n**Top {4} Parça:**\n"
-gstats_5 : "**Top {0} Grup {1}:**\n\n"
-gstats_6 : "**Top {0} Kullanıcı {1}:**\n\n"
-gstats_7 : "Bu Grupta **{0}** Parça **{1}** Kez Çaldı.\n\nGruptaki Top {2} Parça :\n\n"
-gstats_8 : "**İstatistikler Yükleniyor... Bu Biraz Zaman Alabilir... ❄️**"
-gstats_9 : "**BOTTAKİ TOP10 İSTATİSTİKLER**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🔮"
-gstats_10 : "**Global İstatistikler {0}**\n\nButonları Kullanarak İstediğiniz İstatistiği Görebilirsiniz. 🔮"
-gstats_11 : "** {0}'in Genel İstatistiklerini Görmek İçin Aşağıdaki Butona Tıklayabilirsiniz.** 🔮"
+gstats_1 : "**ɢʟᴏʙᴀʟ ɪ̇sᴛᴀᴛɪsᴛɪᴋʟᴇʀ ɢᴇʟɪʏᴏʀ, ʙᴜ ʙɪʀᴀᴢ ᴢᴀᴍᴀɴ ᴀʟᴀʙɪʟɪʀ...** 🔮"
+gstats_2 : "ɪ̇sᴛᴀᴛɪ̇sᴛɪ̇ᴋ ʙᴜʟᴜɴᴀᴍᴀᴅɪ."
+gstats_3 : "**ɢʟᴏʙᴀʟ ᴛᴏᴘ 𝟷𝟶 {0} , ʙᴜ ʙɪʀᴀᴢ ᴢᴀᴍᴀɴ ᴀʟᴀʙɪʟɪʀ...** ⏳"
+gstats_4 : "**ʙᴏᴛᴛᴀᴋɪ ᴛᴏᴘʟᴀᴍ ɪ̇şʟᴇᴍ sᴀʏısı:** {0}\n\n{1} şᴜ ᴀɴᴀ ᴋᴀᴅᴀʀ **{2}** ᴘᴀʀᴄ̧ᴀʏı **{3}** ᴋᴇᴢ ᴄ̧ᴀʟᴅı.\n\n**ᴛᴏᴘ {4} ᴘᴀʀᴄ̧ᴀ:**\n"
+gstats_5 : "**ᴛᴏᴘ {0} ɢʀᴜᴘ {1}:**\n\n"
+gstats_6 : "**ᴛᴏᴘ {0} ᴋᴜʟʟᴀɴɪᴄɪ {1}:**\n\n"
+gstats_7 : "ʙᴜ ɢʀᴜᴘᴛᴀ **{0}** ᴘᴀʀᴄ̧ᴀ **{1}** ᴋᴇᴢ ᴄ̧ᴀʟᴅı.\n\nɢʀᴜᴘᴛᴀᴋɪ ᴛᴏᴘ {2} ᴘᴀʀᴄ̧ᴀ :\n\n"
+gstats_8 : "**ɪ̇sᴛᴀᴛɪsᴛɪᴋʟᴇʀ ʏᴜ̈ᴋʟᴇɴɪʏᴏʀ... ʙᴜ ʙɪʀᴀᴢ ᴢᴀᴍᴀɴ ᴀʟᴀʙɪʟɪʀ... ⏳**"
+gstats_9 : "**ʙᴏᴛᴛᴀᴋɪ̇ ᴛᴏᴘ𝟷𝟶 ɪ̇sᴛᴀᴛɪ̇sᴛɪ̇ᴋʟᴇʀ**\n\nʙᴜᴛᴏɴʟᴀʀı ᴋᴜʟʟᴀɴᴀʀᴀᴋ ɪ̇sᴛᴇᴅɪɢ̆ɪɴɪᴢ ɪ̇sᴛᴀᴛɪsᴛɪɢ̆ɪ ɢᴏ̈ʀᴇʙɪʟɪʀsɪɴɪᴢ. 🔮"
+gstats_10 : "**ɢʟᴏʙᴀʟ ɪ̇sᴛᴀᴛɪsᴛɪᴋʟᴇʀ {0}**\n\nʙᴜᴛᴏɴʟᴀʀı ᴋᴜʟʟᴀɴᴀʀᴀᴋ ɪ̇sᴛᴇᴅɪɢ̆ɪɴɪᴢ ɪ̇sᴛᴀᴛɪsᴛɪɢ̆ɪ ɢᴏ̈ʀᴇʙɪʟɪʀsɪɴɪᴢ. 🔮"
+gstats_11 : "**ʟᴏsᴛ ᴍᴜ̈ᴢɪᴋ'ɪɴ ɢᴇɴᴇʟ ɪ̇sᴛᴀᴛɪsᴛɪᴋʟᴇʀɪɴɪ ɢᴏ̈ʀᴍᴇᴋ ɪ̇ᴄ̧ɪɴ ᴀşᴀɢ̆ıᴅᴀᴋɪ ʙᴜᴛᴏɴᴀ ᴛıᴋʟᴀʏᴀʙɪʟɪʀsɪɴɪᴢ** 🔮"
 
 
 # Play 
 #Play Callback 
-playcb_1 : "Bu Senin İçin Değil! Kendi Şarkını Ara."
-playcb_2 : "Sonraki Sonucu Alma"
+playcb_1 : "ʙᴜ sᴇɴɪɴ ɪ̇ᴄ̧ɪɴ ᴅᴇɢ̆ɪʟ! ᴋᴇɴᴅɪ şᴀʀᴋıɴı ᴀʀᴀ."
+playcb_2 : "sᴏɴʀᴀᴋɪ sᴏɴᴜᴄᴜ ᴀʟᴍᴀ"
 
 # Channel Play
 cplay_1 : "Bu sohbetteki kanallarda[{0}] herhangi bir kanala veya sohbetinizin bağlantılı kanalına müzik çalabilirsiniz.\n\n**Bağlı kanal için:**\n`/{1}bağlı`\n\n** Diğer herhangi bir kanal için:**\n`/{1} [Kanal Kimliği]`"
