--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -135,12 +135,12 @@ playcb_2 : "sᴏɴʀᴀᴋɪ sᴏɴᴜᴄᴜ ᴀʟᴍᴀ"
 cplay_1 : "ʙᴜ sᴏʜʙᴇᴛᴛᴇᴋɪ ᴋᴀɴᴀʟʟᴀʀᴅᴀ[{0}] ʜᴇʀʜᴀɴɢɪ ʙɪʀ ᴋᴀɴᴀʟᴀ ᴠᴇʏᴀ sᴏʜʙᴇᴛɪɴɪᴢɪɴ ʙᴀɢ̆ʟᴀɴᴛıʟı ᴋᴀɴᴀʟıɴᴀ ᴍᴜ̈ᴢɪᴋ ᴄ̧ᴀʟᴀʙɪʟɪʀsɪɴɪᴢ.\n\n**ʙᴀɢ̆ʟı ᴋᴀɴᴀʟ ɪᴄ̧ɪɴ:**\n`/{1}ʙᴀɢ̆ʟı`\n\n** ᴅɪɢ̆ᴇʀ ʜᴇʀʜᴀɴɢɪ ʙɪʀ ᴋᴀɴᴀʟ ɪᴄ̧ɪɴ:**\n`/{1} [ᴋᴀɴᴀʟ ᴋɪᴍʟɪɢ̆ɪ]`"
 cplay_2 : "ʙᴜ sᴏʜʙᴇᴛᴛᴇ ʙᴀɢ̆ʟᴀɴᴛıʟı ᴋᴀɴᴀʟ ʏᴏᴋ."
 cplay_3 : "{0}\n\n__ᴋᴀɴᴀʟ ᴋɪᴍʟɪɢ̆ɪ__ ɪʟᴇ ᴛᴀɴıᴍʟᴀɴᴍış ᴋᴀɴᴀʟ: {1}"
-cplay_4 : "Kanal alınamadı.\n\nKanalınıza bot eklediğinizden ve onu yönetici olarak terfi ettirdiğinizden emin olun.\nKanalı /channelplay ile değiştirin veya /playmode ile kanal oynatma modunu devre dışı bırakın"
-cplay_5 : "Yalnızca Kanallar Desteklenir."
-cplay_6 : "Kanalı bu gruba bağlamak için[{0}] kanalın **Sahibi** olmanız gerekir.\n**Kanal Sahibi:** @{1}\n\nAlternatif olarak grubunuzu o kanala bağlayabilirsiniz. ve ardından `/channelplay bağlantılı ile bağlanmayı deneyin`"
+cplay_4 : "ᴋᴀɴᴀʟ ᴀʟıɴᴀᴍᴀᴅı.\n\nᴋᴀɴᴀʟıɴıᴢᴀ ʙᴏᴛ ᴇᴋʟᴇᴅɪɢ̆ɪɴɪᴢᴅᴇɴ ᴠᴇ ᴏɴᴜ ʏᴏ̈ɴᴇᴛɪᴄɪ ᴏʟᴀʀᴀᴋ ᴛᴇʀғɪ ᴇᴛᴛɪʀᴅɪɢ̆ɪɴɪᴢᴅᴇɴ ᴇᴍɪɴ ᴏʟᴜɴ.\nᴋᴀɴᴀʟı /ᴄʜᴀɴɴᴇʟᴘʟᴀʏ ɪʟᴇ ᴅᴇɢ̆ɪşᴛɪʀɪɴ ᴠᴇʏᴀ /ᴘʟᴀʏᴍᴏᴅᴇ ɪʟᴇ ᴋᴀɴᴀʟ ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜɴᴜ ᴅᴇᴠʀᴇ ᴅışı ʙıʀᴀᴋıɴ."
+cplay_5 : "ʏᴀʟɴıᴢᴄᴀ ᴋᴀɴᴀʟʟᴀʀ ᴅᴇsᴛᴇᴋʟᴇɴɪʀ."
+cplay_6 : "ᴋᴀɴᴀʟı ʙᴜ ɢʀᴜʙᴀ ʙᴀɢ̆ʟᴀᴍᴀᴋ ɪᴄ̧ɪɴ[{0}] ᴋᴀɴᴀʟıɴ **sᴀʜɪʙɪ** ᴏʟᴍᴀɴıᴢ ɢᴇʀᴇᴋɪʀ.\n**ᴋᴀɴᴀʟ sᴀʜɪʙɪ:** @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪғ ᴏʟᴀʀᴀᴋ ɢʀᴜʙᴜɴᴜᴢᴜ ᴏ ᴋᴀɴᴀʟᴀ ʙᴀɢ̆ʟᴀʏᴀʙɪʟɪʀsɪɴɪᴢ. ᴠᴇ ᴀʀᴅıɴᴅᴀɴ `/ᴄʜᴀɴɴᴇʟᴘʟᴀʏ ʙᴀɢ̆ʟᴀɴᴛıʟı ɪʟᴇ ʙᴀɢ̆ʟᴀɴᴍᴀʏı ᴅᴇɴᴇʏɪɴ.`"
 
 #Play
-play_1 : "🔃**Müzik İndiriliyor... Lütfen Bekleyin...** 🔮"
+play_1 : "🔮 **ᴍᴜ̈ᴢɪᴋ ɪ̇ɴᴅɪʀɪʟɪʏᴏʀ...**\n⏳ **ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ...**"
 play_2 : "**🏷Kanal Oynatma Modu**\n🔮 Sorgu İşleniyor... Lütfen Bekleyin!\n\n**Bağlı Kanal:** {0}"
 play_3 : "Sorgu İşlenemedi! Başka Bir Parça Oynatmayı Deneyiniz. ❄️"
 play_4 : "🖇 **Yalnızca Yöneticiler Oynatır**\nYalnızca Yöneticiler ve Yetkilendirilmiş Kullanıcılar bu grupta müzik çalabilir.\n\nModu /playmode aracılığıyla değiştirin ve zaten yöneticiyseniz, /admincache aracılığıyla admincache'i yeniden yükleyin"
