--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -150,40 +150,40 @@ play_7 : "**ᴜ̈ᴢɢᴜ̈ɴᴜ̈ᴍ! şᴜ ᴀɴᴅᴀ ʙɪʀᴄ̧ᴏᴋ ɢʀ
 play_8 : "ɢᴇᴄ̧ᴇʀʟɪ ʙɪʀ ᴠɪᴅᴇᴏ ᴅᴏsʏᴀsı ᴜᴢᴀɴᴛısı ᴅᴇɢ̆ɪʟ!\n\n**ᴅᴇsᴛᴇᴋʟᴇɴᴇɴ ʙɪᴄ̧ɪᴍʟᴇʀ:** {0}"
 play_9 : "ᴠɪᴅᴇᴏ ᴅᴏsʏᴀ ʙᴏʏᴜᴛᴜ 𝟷 ɢʙ'ᴅᴇɴ ᴋᴜ̈ᴄ̧ᴜ̈ᴋ ᴏʟᴍᴀʟı. 🔮"
 play_10 : "**ʏᴏᴜᴛᴜʙᴇ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪ ᴏ̈ᴢᴇʟʟɪɢ̆ɪ**\n\nʏᴏᴜᴛᴜʙᴇ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪɴɪɴ ᴛᴀᴍᴀᴍıɴı ᴏʏɴᴀᴛᴍᴀᴋ ɪsᴛᴇᴅɪɢ̆ɪɴɪᴢ ᴍᴏᴅᴜ sᴇᴄ̧ɪɴ."
-play_11 : "🔮Başlık: **{0}\n\n⏱Süre:** {1} Dakika"
-play_12 : "**Spotify Oynatma Listeleri**\n\n👉Talep Eden:- {0}"
-play_13 : "**Apple Oynatma Listeleri**\n\n👉Talep Eden:- {0}"
-play_14 : "**URL doğrulanamıyor.**\nBot, bu url'nin şu platformlardan birine ait olup olmadığını merak ediyor: Youtube, AppleMusic, Spotify, Resso ve Soundcloud.\n\nM3u8 veya Uzak Bağlantılar için /stream'i kullanabilirsiniz.."
-play_15 : "**Canlı Yayın Algılandı**\n\nSistemler, stream bağlantınızı canlı yayın olarak algıladı. Canlı yayın oynamak istiyormusunuz ?"
-play_16 : "Parça ayrıntıları getirilemedi. Başka şarkı deneyin. 🔮"
-play_17 : "Unable to play this type of spotify query!\n\nI can only play spotify tracks, albums, artists and playlists"
-play_18 : "**Aktif Sesli Sohbet Bulunamadı Lütfen Üyeler Kısmına Girip Sağ Üst Köşedeki Üç Noktadan Sesli Sohbet Açın **\n\nAktif Sesli Sohbet Açıksa /restart Komutunu Kullanıp Sesli Sohbeti Kapatıp Yeniden Açın."
+play_11 : "🔮 ʙᴀşʟıᴋ: **{0}\n\n⏱sᴜ̈ʀᴇ:** {1} ᴅᴀᴋɪᴋᴀ"
+play_12 : "**sᴘᴏᴛɪғʏ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪ**\n\n👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ:- {0}"
+play_13 : "**ᴀᴘᴘʟᴇ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪ**\n\n👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ:- {0}"
+play_14 : "**ᴜʀʟ ᴅᴏɢ̆ʀᴜʟᴀɴᴀᴍıʏᴏʀ.**\nʙᴏᴛ, ʙᴜ ᴜʀʟ'ɴɪɴ şᴜ ᴘʟᴀᴛғᴏʀᴍʟᴀʀᴅᴀɴ ʙɪʀɪɴᴇ ᴀɪᴛ ᴏʟᴜᴘ ᴏʟᴍᴀᴅıɢ̆ıɴı ᴍᴇʀᴀᴋ ᴇᴅɪʏᴏʀ: ʏᴏᴜᴛᴜʙᴇ, ᴀᴘᴘʟᴇᴍᴜsɪᴄ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ ᴠᴇ sᴏᴜɴᴅᴄʟᴏᴜᴅ.\n\nᴍ𝟹ᴜ𝟾 ᴠᴇʏᴀ ᴜᴢᴀᴋ ʙᴀɢ̆ʟᴀɴᴛıʟᴀʀ ɪᴄ̧ɪɴ /sᴛʀᴇᴀᴍ'ɪ ᴋᴜʟʟᴀɴᴀʙɪʟɪʀsɪɴɪᴢ.."
+play_15 : "❗ **ᴄᴀɴʟı ʏᴀʏıɴ ᴀʟɢıʟᴀɴᴅı**\n\nsɪsᴛᴇᴍʟᴇʀ, sᴛʀᴇᴀᴍ ʙᴀɢ̆ʟᴀɴᴛıɴıᴢı ᴄᴀɴʟı ʏᴀʏıɴ ᴏʟᴀʀᴀᴋ ᴀʟɢıʟᴀᴅı. ᴄᴀɴʟı ʏᴀʏıɴ ᴏʏɴᴀᴍᴀᴋ ɪsᴛɪʏᴏʀᴍᴜsᴜɴᴜᴢ ?"
+play_16 : "ᴘᴀʀᴄ̧ᴀ ᴀʏʀıɴᴛıʟᴀʀı ɢᴇᴛɪʀɪʟᴇᴍᴇᴅɪ. ʙᴀşᴋᴀ şᴀʀᴋı ᴅᴇɴᴇʏɪɴ. 🔮"
+play_17 : "ʙᴜ ᴛᴜ̈ʀ sᴘᴏᴛɪғʏ sᴏʀɢᴜsᴜ ᴏʏɴᴀᴛıʟᴀᴍıʏᴏʀ!\n\nʏᴀʟɴıᴢᴄᴀ sᴘᴏᴛɪғʏ ᴘᴀʀᴄ̧ᴀʟᴀʀıɴı, ᴀʟʙᴜ̈ᴍʟᴇʀɪɴɪ, sᴀɴᴀᴛᴄ̧ıʟᴀʀıɴı ᴠᴇ ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇʟᴇʀɪɴɪ ᴄ̧ᴀʟᴀʙɪʟɪʏᴏʀᴜᴍ."
+play_18 : "**ᴀᴋᴛɪғ sᴇsʟɪ sᴏʜʙᴇᴛ ʙᴜʟᴜɴᴀᴍᴀᴅı ʟᴜ̈ᴛғᴇɴ ᴜ̈ʏᴇʟᴇʀ ᴋısᴍıɴᴀ ɢɪʀɪᴘ sᴀɢ̆ ᴜ̈sᴛ ᴋᴏ̈şᴇᴅᴇᴋɪ ᴜ̈ᴄ̧ ɴᴏᴋᴛᴀᴅᴀɴ sᴇsʟɪ sᴏʜʙᴇᴛ ᴀᴄ̧ıɴ**\n\nᴀᴋᴛɪғ sᴇsʟɪ sᴏʜʙᴇᴛ ᴀᴄ̧ıᴋsᴀ /ʀᴇsᴛᴀʀᴛ ᴋᴏᴍᴜᴛᴜɴᴜ ᴋᴜʟʟᴀɴıᴘ sᴇsʟɪ sᴏʜʙᴇᴛɪ ᴋᴀᴘᴀᴛıᴘ ʏᴇɴɪᴅᴇɴ ᴀᴄ̧ıɴ."
 
 
 #Playlist
-playlist_1 : "**Kullanım:** /oynat [Müzik Adı veya Youtube Bağlantısı veya Sesi Yanıtla]\n\n**Bot'un Oynatma Listelerini Oynatmak İstiyorsanız Aşağıdaki Butonları Kullanın.** 🔮"
-playlist_2 : "**Çalma listeniz alınıyor. Lütfen bekleyin...** 🔮"
-playlist_3 : "Bot Sunucusunda oynatma listeniz yok. 🔮"
-playlist_4 : "Getirilen Oynatma Listesi:\n\n"
-playlist_5 :  "    Süre - {0} Dakika"
-playlist_6 : "Çalma Listelerini silmek için PM'den bana ulaşın."
-playlist_7 : "Çalma Listesindeki Parçalar: {0}\n\nÇalma Listenizdeki Belirli Bir Parçayı Silmek İçin Butonlara Basın.\n\nTüm Çalma Listesini Silmek İçin: Del Butonuna Basın."
-playlist_8 : "Zaten Var\n\nBu parça çalma listenizde var. 🔮"
-playlist_9 : "Üzgünüm! Bir oynatma listesinde yalnızca {0} müziğiniz olabilir."
-playlist_10 : "Oynatma Listesi Ekleme\n\n{0}\ Oynatma Listenize Eklendi."
-playlist_11 : "Listeniz başarıyla silindi. ✅"
-playlist_12 : "Listeniz silinemedi."
-playlist_13 : "Tüm çalma listeleriniz sunucudan silindi. ✅"
-playlist_14 : "**Tüm oynatma listenizi silmek istediğinizden emin misiniz?**\n\nOynatma listenizi kaybedeceksiniz ve bu daha sonra kurtarılamaz."
-playlist_15 : "[Tüm Oynatma Listesini Kontrol Et]({0})"
-playlist_16 : "Sıraya Alınmış Oynatma Listesi:"
-playlist_17 : "Sıradaki Pozisyon-"
-playlist_18 : "[Tüm Sıradaki Oynatma Listesini Kontrol Et]({0})\n\nSon Sıradaki Pozisyon : **{1}**"
+playlist_1 : "**ᴋᴜʟʟᴀɴıᴍ:** /ᴏʏɴᴀᴛ [ᴍᴜ̈ᴢɪᴋ ᴀᴅı ᴠᴇʏᴀ ʏᴏᴜᴛᴜʙᴇ ʙᴀɢ̆ʟᴀɴᴛısı ᴠᴇʏᴀ sᴇsɪ ʏᴀɴıᴛʟᴀ]\n\n**ʙᴏᴛ'ᴜɴ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪɴɪ ᴏʏɴᴀᴛᴍᴀᴋ ɪ̇sᴛɪʏᴏʀsᴀɴıᴢ ᴀşᴀɢ̆ıᴅᴀᴋɪ ʙᴜᴛᴏɴʟᴀʀı ᴋᴜʟʟᴀɴıɴ.** 🔮"
+playlist_2 : "**ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇɴɪᴢ ᴀʟıɴıʏᴏʀ. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ...** 🔮"
+playlist_3 : "ʙᴏᴛ sᴜɴᴜᴄᴜsᴜɴᴅᴀ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇɴɪᴢ ʏᴏᴋ. 🔮"
+playlist_4 : "ɢᴇᴛɪʀɪʟᴇɴ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪ:\n\n"
+playlist_5 :  "    sᴜ̈ʀᴇ - {0} ᴅᴀᴋɪᴋᴀ"
+playlist_6 : "ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇʟᴇʀɪɴɪ sɪʟᴍᴇᴋ ɪᴄ̧ɪɴ ᴏ̈ᴢᴇʟ sᴏʜʙᴇᴛ'ᴛᴇɴ ʙᴀɴᴀ ᴜʟᴀşıɴ."
+playlist_7 : "ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇsɪɴᴅᴇᴋɪ ᴘᴀʀᴄ̧ᴀʟᴀʀ: {0}\n\nᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇɴɪᴢᴅᴇᴋɪ ʙᴇʟɪʀʟɪ ʙɪʀ ᴘᴀʀᴄ̧ᴀʏı sɪʟᴍᴇᴋ ɪ̇ᴄ̧ɪɴ ʙᴜᴛᴏɴʟᴀʀᴀ ʙᴀsıɴ.\n\nᴛᴜ̈ᴍ ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇsɪɴɪ sɪʟᴍᴇᴋ ɪ̇ᴄ̧ɪɴ: ᴅᴇʟ ʙᴜᴛᴏɴᴜɴᴀ ʙᴀsıɴ."
+playlist_8 : "ᴢᴀᴛᴇɴ ᴠᴀʀ\n\nʙᴜ ᴘᴀʀᴄ̧ᴀ ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇɴɪᴢᴅᴇ ᴠᴀʀ. 🔮"
+playlist_9 : "ᴜ̈ᴢɢᴜ̈ɴᴜ̈ᴍ! ʙɪʀ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪɴᴅᴇ ʏᴀʟɴıᴢᴄᴀ {0} ᴍᴜ̈ᴢɪɢ̆ɪɴɪᴢ ᴏʟᴀʙɪʟɪʀ."
+playlist_10 : "ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪ ᴇᴋʟᴇᴍᴇ\n\n{0}\ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇɴɪᴢᴇ ᴇᴋʟᴇɴᴅɪ."
+playlist_11 : "ʟɪsᴛᴇɴɪᴢ ʙᴀşᴀʀıʏʟᴀ sɪʟɪɴᴅɪ. ✅"
+playlist_12 : "ʟɪsᴛᴇɴɪᴢ sɪʟɪɴᴇᴍᴇᴅɪ."
+playlist_13 : "ᴛᴜ̈ᴍ ᴄ̧ᴀʟᴍᴀ ʟɪsᴛᴇʟᴇʀɪɴɪᴢ sᴜɴᴜᴄᴜᴅᴀɴ sɪʟɪɴᴅɪ. ✅"
+playlist_14 : "**ᴛᴜ̈ᴍ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇɴɪᴢɪ sɪʟᴍᴇᴋ ɪsᴛᴇᴅɪɢ̆ɪɴɪᴢᴅᴇɴ ᴇᴍɪɴ ᴍɪsɪɴɪᴢ?**\n\nᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇɴɪᴢɪ ᴋᴀʏʙᴇᴅᴇᴄᴇᴋsɪɴɪᴢ ᴠᴇ ʙᴜ ᴅᴀʜᴀ sᴏɴʀᴀ ᴋᴜʀᴛᴀʀıʟᴀᴍᴀᴢ."
+playlist_15 : "[ᴛᴜ̈ᴍ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪɴɪ ᴋᴏɴᴛʀᴏʟ ᴇᴛ]({0})"
+playlist_16 : "sıʀᴀʏᴀ ᴀʟıɴᴍış ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪ:"
+playlist_17 : "sıʀᴀᴅᴀᴋɪ ᴘᴏᴢɪsʏᴏɴ-"
+playlist_18 : "[ᴛᴜ̈ᴍ sıʀᴀᴅᴀᴋɪ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪɴɪ ᴋᴏɴᴛʀᴏʟ ᴇᴛ]({0})\n\nsᴏɴ sıʀᴀᴅᴀᴋɪ ᴘᴏᴢɪsʏᴏɴ: **{1}**"
 
 
 #Playmode
-playmode_1 : "**Grubunuzdaki Müzikleri Oynatmak istediğiniz Modu Seçin[{0}].**"
-playmode_2 : "Ayarlar {0} tarafından başarıyla değiştirildi ve kaydedildi. 🔮"
+playmode_1 : "**ɢʀᴜʙᴜɴᴜᴢᴅᴀᴋɪ ᴍᴜ̈ᴢɪᴋʟᴇʀɪ ᴏʏɴᴀᴛᴍᴀᴋ ɪsᴛᴇᴅɪɢ̆ɪɴɪᴢ ᴍᴏᴅᴜ sᴇᴄ̧ɪɴ[{0}].**"
+playmode_2 : "ᴀʏᴀʀʟᴀʀ {0} ᴛᴀʀᴀғıɴᴅᴀɴ ʙᴀşᴀʀıʏʟᴀ ᴅᴇɢ̆ɪşᴛɪʀɪʟᴅɪ ᴠᴇ ᴋᴀʏᴅᴇᴅɪʟᴅɪ. 🔮"
 
 #Stream 
 str_1 : "Lütfen M3u8 Bağlantıları veya Dizin Bağlantıları Sağlayın."
