--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -200,12 +200,12 @@ tracks_2 : "**ʜᴀᴛᴀ**\n\nʙᴏᴛ'ᴜɴ sᴜɴᴜᴄᴜʟᴀʀıɴᴅᴀ *
 #Lyrics
 lyrics_1 : "**ᴋᴜʟʟᴀɴıᴍ:**\n\n/sᴀʀᴋɪsᴏᴢᴜ [şᴀʀᴋı ᴀᴅı]"
 lyrics_2 : "şᴀʀᴋı sᴏ̈ᴢʟᴇʀɪ ᴀʀᴀᴍᴀ"
-lyrics_3 : "❌ Şarkı sözleri getirilemedi😭.\n\n🔮**Aramaya çalışıldı:** {0}"
-lyrics_4 : "Grubu spama sokmaktan kaçınmak için aşağıdaki düğmeyi tıklayın ve komutu özelde kullanın."
+lyrics_3 : "❌ şᴀʀᴋı sᴏ̈ᴢʟᴇʀɪ ɢᴇᴛɪʀɪʟᴇᴍᴇᴅɪ 😭.\n\n🔮**ᴀʀᴀᴍᴀʏᴀ ᴄ̧ᴀʟışıʟᴅı:** {0}"
+lyrics_4 : "ɢʀᴜʙᴜ sᴘᴀᴍᴀ sᴏᴋᴍᴀᴋᴛᴀɴ ᴋᴀᴄ̧ıɴᴍᴀᴋ ɪᴄ̧ɪɴ ᴀşᴀɢ̆ıᴅᴀᴋɪ ᴅᴜ̈ɢ̆ᴍᴇʏɪ ᴛıᴋʟᴀʏıɴ ᴠᴇ ᴋᴏᴍᴜᴛᴜ ᴏ̈ᴢᴇʟᴅᴇ ᴋᴜʟʟᴀɴıɴ."
 
 #Ping
-ping_1 : "🏓Pong!!!!"
-ping_2 : "**🔮 {0} 🔮\nGecikme: `{1}` ms\nUpTime: {2}\nDepolama: {3}\nCpu: {4}\nRam: {5}\nPython: `{6}` ms 🔮**"
+ping_1 : "🏓 ᴘɪɴɢ ᴘᴏɴɢ!!!!"
+ping_2 : "**🔮 ʟᴏsᴛ ᴍᴜ̈ᴢɪᴋ 🔮\nɢᴇᴄɪᴋᴍᴇ: `{1}` ms\nᴄ̧ᴀʟışᴍᴀ sᴜ̈ʀᴇsɪ: {2}\nᴅᴇᴘᴏʟᴀᴍᴀ: {3}\nɪ̇şʟᴇᴍᴄɪ: {4}\nʙᴇʟʟᴇᴋ: {5}\nᴘʏᴛʜᴏɴ: `{6}` ᴍs 🔮**"
 
 # Song
 song_1 : "YouTube'dan Müzik veya Video'yu yalnızca özel sohbette indirebilirsiniz. Lütfen beni özel sohbette başlat. 🔮"
