--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -208,13 +208,13 @@ ping_1 : "🏓 ᴘɪɴɢ ᴘᴏɴɢ!!!!"
 ping_2 : "**🔮 ʟᴏsᴛ ᴍᴜ̈ᴢɪᴋ 🔮\nɢᴇᴄɪᴋᴍᴇ: `{1}` ms\nᴄ̧ᴀʟışᴍᴀ sᴜ̈ʀᴇsɪ: {2}\nᴅᴇᴘᴏʟᴀᴍᴀ: {3}\nɪ̇şʟᴇᴍᴄɪ: {4}\nʙᴇʟʟᴇᴋ: {5}\nᴘʏᴛʜᴏɴ: `{6}` ᴍs 🔮**"
 
 # Song
-song_1 : "YouTube'dan Müzik veya Video'yu yalnızca özel sohbette indirebilirsiniz. Lütfen beni özel sohbette başlat. 🔮"
-song_2 : "**Kullanım:**\n/indir [Şarkı Adı] veya [Youtube Link]\n\n(**Örnek:** /indir Defkhan Kapak Olsun)"
-song_3 : "Canlı Bağlantı Algılandı. Canlı youtube videolarını indiremiyorum. 🔮"
-song_4 : "**🔮Başlık: {0}**\n\n**İndirmek istediğiniz türü seçin.**"
-song_5 : "Geçerli bir Youtube Bağlantısı değil"
-song_6 : "Format Alınıyor... 🔮\n\nLütfen Bekleyin.. ✅"
-song_7 : "Video için kullanılabilir biçimler alınamadı. Lütfen başka bir parça deneyin."
+song_1 : "ʏᴏᴜᴛᴜʙᴇ'ᴅᴀɴ ᴍᴜ̈ᴢɪᴋ ᴠᴇʏᴀ ᴠɪᴅᴇᴏ'ʏᴜ ʏᴀʟɴıᴢᴄᴀ ᴏ̈ᴢᴇʟ sᴏʜʙᴇᴛᴛᴇ ɪɴᴅɪʀᴇʙɪʟɪʀsɪɴɪᴢ. ʟᴜ̈ᴛғᴇɴ ʙᴇɴɪ ᴏ̈ᴢᴇʟ sᴏʜʙᴇᴛᴛᴇ ʙᴀşʟᴀᴛ. 🔮"
+song_2 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/ɪɴᴅɪʀ [şᴀʀᴋı ᴀᴅı] ᴠᴇʏᴀ [ʏᴏᴜᴛᴜʙᴇ ʟɪɴᴋ]\n\n(**ᴏ̈ʀɴᴇᴋ:** /ɪɴᴅɪʀ ᴅᴇғᴋʜᴀɴ ᴋᴀᴘᴀᴋ ᴏʟsᴜɴ)"
+song_3 : "ᴄᴀɴʟı ʙᴀɢ̆ʟᴀɴᴛı ᴀʟɢıʟᴀɴᴅı. ᴄᴀɴʟı ʏᴏᴜᴛᴜʙᴇ ᴠɪᴅᴇᴏʟᴀʀıɴı ɪɴᴅɪʀᴇᴍɪʏᴏʀᴜᴍ. 🔮"
+song_4 : "**🔮 ʙᴀşʟıᴋ: {0}**\n\n**ɪ̇ɴᴅɪʀᴍᴇᴋ ɪsᴛᴇᴅɪɢ̆ɪɴɪᴢ ᴛᴜ̈ʀᴜ̈ sᴇᴄ̧ɪɴ.**"
+song_5 : "ɢᴇᴄ̧ᴇʀʟɪ ʙɪʀ ʏᴏᴜᴛᴜʙᴇ ʙᴀɢ̆ʟᴀɴᴛısı ᴅᴇɢ̆ɪʟ."
+song_6 : "ғᴏʀᴍᴀᴛ ᴀʟıɴıʏᴏʀ... 🔮\n\nʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ.. ✅"
+song_7 : "ᴠɪᴅᴇᴏ ɪᴄ̧ɪɴ ᴋᴜʟʟᴀɴıʟᴀʙɪʟɪʀ ʙɪᴄ̧ɪᴍʟᴇʀ ᴀʟıɴᴀᴍᴀᴅı. ʟᴜ̈ᴛғᴇɴ ʙᴀşᴋᴀ ʙɪʀ ᴘᴀʀᴄ̧ᴀ ᴅᴇɴᴇʏɪɴ."
 song_8 : "**İndirme Başladı\n\nİndirme hızı yavaş olabilir. Lütfen bekleyin...** 🔮"
 song_9 : "Youtube'dan şarkı indirilemedi\n\n**Nedeni:** {0}"
 song_10 : "Sunuculardan telegrama yüklenemedi."
