--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -215,24 +215,24 @@ song_4 : "**🔮 ʙᴀşʟıᴋ: {0}**\n\n**ɪ̇ɴᴅɪʀᴍᴇᴋ ɪsᴛᴇᴅ
 song_5 : "ɢᴇᴄ̧ᴇʀʟɪ ʙɪʀ ʏᴏᴜᴛᴜʙᴇ ʙᴀɢ̆ʟᴀɴᴛısı ᴅᴇɢ̆ɪʟ."
 song_6 : "ғᴏʀᴍᴀᴛ ᴀʟıɴıʏᴏʀ... 🔮\n\nʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ.. ✅"
 song_7 : "ᴠɪᴅᴇᴏ ɪᴄ̧ɪɴ ᴋᴜʟʟᴀɴıʟᴀʙɪʟɪʀ ʙɪᴄ̧ɪᴍʟᴇʀ ᴀʟıɴᴀᴍᴀᴅı. ʟᴜ̈ᴛғᴇɴ ʙᴀşᴋᴀ ʙɪʀ ᴘᴀʀᴄ̧ᴀ ᴅᴇɴᴇʏɪɴ."
-song_8 : "**İndirme Başladı\n\nİndirme hızı yavaş olabilir. Lütfen bekleyin...** 🔮"
-song_9 : "Youtube'dan şarkı indirilemedi\n\n**Nedeni:** {0}"
-song_10 : "Sunuculardan telegrama yüklenemedi."
-song_11 : "**Yükleme Başladı\n\nYükleme hızı yavaş olabilir. Lütfen bekleyin...** 🔮 "
+song_8 : "**ɪ̇ɴᴅɪ̇ʀᴍᴇ ʙᴀşʟᴀᴅı\n\nɪ̇ɴᴅɪ̇ʀᴍᴇ ʜıᴢı ʏᴀᴠᴀş ᴏʟᴀʙɪʟɪʀ. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ...** 🔮"
+song_9 : "ʏᴏᴜᴛᴜʙᴇ'ᴅᴀɴ şᴀʀᴋı ɪɴᴅɪʀɪʟᴇᴍᴇᴅɪ\n\n**ɴᴇᴅᴇɴɪ:** {0}"
+song_10 : "sᴜɴᴜᴄᴜʟᴀʀᴅᴀɴ ᴛᴇʟᴇɢʀᴀᴍᴀ ʏᴜ̈ᴋʟᴇɴᴇᴍᴇᴅɪ."
+song_11 : "**ʏᴜ̈ᴋʟᴇᴍᴇ ʙᴀşʟᴀᴅı\n\nʏᴜ̈ᴋʟᴇᴍᴇ ʜıᴢı ʏᴀᴠᴀş ᴏʟᴀʙɪʟɪʀ. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ...** 🔮 "
 
 # Tools - Queue
-queue_1 : "**Lütfen Bekleyin.. Sıra Alınıyor...** 🔮"
-queue_2 : "Sırada Malesef Hiçbir Şey Yok. 😔"
-queue_3 : "<u>**Sıradaki Parçalar:</u>**  [Sıradaki Parçalara Burdan Bakabilirsiniz]({0})"
-queue_4 : "✅ Sıraya eklendi **#{0}\n\n🔮Başlık:** {1}\n**⏱Süre:** {2}\n👉**Talep Eden: {3}**"
-queue_5 : "Sırada Sadece Bir Parça Var, Lütfen Biraz Daha Parça Ekleyin. 🎧"
+queue_1 : "**ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ.. sıʀᴀ ᴀʟıɴıʏᴏʀ...** 🔮"
+queue_2 : "sıʀᴀᴅᴀ ᴍᴀᴀʟᴇsᴇғ ʜɪᴄ̧ʙɪʀ şᴇʏ ʏᴏᴋ.. 😔"
+queue_3 : "<u>**sıʀᴀᴅᴀᴋɪ ᴘᴀʀᴄ̧ᴀʟᴀʀ:</u>**  [sɪʀᴀᴅᴀᴋɪ ᴘᴀʀᴄ̧ᴀʟᴀʀᴀ ʙᴜʀᴅᴀɴ ʙᴀᴋᴀʙɪʟɪʀsɪɴɪᴢ]({0})"
+queue_4 : "⏳ sɪʀᴀʏᴀ ᴇᴋʟᴇɴᴅɪ **#{0}\n\n🔮 ʙᴀşʟıᴋ:** {1}\n**⏱ sᴜ̈ʀᴇ:** {2}\n👉 **ᴛᴀʟᴇᴘ ᴇᴅᴇɴ: {3}**"
+queue_5 : "sıʀᴀᴅᴀ sᴀᴅᴇᴄᴇ ʙɪʀ ᴘᴀʀᴄ̧ᴀ ᴠᴀʀ, ʟᴜ̈ᴛғᴇɴ ʙɪʀᴀᴢ ᴅᴀʜᴀ ᴘᴀʀᴄ̧ᴀ ᴇᴋʟᴇʏɪɴ. 🎧"
 
-stream_1 : "🔮**ʙᴀşʟɪᴋ**: {0} \n**⌛️Süre**: {2}\n**👉Talep Eden**: {3}"
-stream_2 : " **Yayın Başlatıldı** \n**Başlık**: {0}\n**⌛️Süre**: {2}\n**👉Talep Eden**: {3}"
-stream_3 : "🔮**ʙᴀşʟɪᴋ**: {0}\n**⌛️Süre**: {1}\n**👉Talep Eden**: {2}"
-stream_4 : "🔮**ʙᴀşʟɪᴋ**: [{0}]\n**⌛️Süre**: {2}\n**👉Talep Eden**: {3}"
-stream_5 : "🔮**ʙᴀşʟɪᴋ**: {0}\n**👉Talep Eden**:{1}"
-stream_6 : " **Yayın Başlatıldı**  \n**Parça**: [{0}]({1})\n**👉Talep Eden**: {2}"
+stream_1 : "🔮 **ʙᴀşʟɪᴋ**: {0} \n**⌛️ sᴜ̈ʀᴇ**: {2}\n**👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ**: {3}"
+stream_2 : " **ʏᴀʏıɴ ʙᴀşʟᴀᴛıʟᴅı** \n**ʙᴀşʟıᴋ**: {0}\n**⌛️ sᴜ̈ʀᴇ**: {2}\n**👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ**: {3}"
+stream_3 : "🔮 **ʙᴀşʟɪᴋ**: {0}\n**⌛️ sᴜ̈ʀᴇ**: {1}\n**👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ**: {2}"
+stream_4 : "🔮 **ʙᴀşʟɪᴋ**: [{0}]\n**⌛️ sᴜ̈ʀᴇ**: {2}\n**👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ**: {3}"
+stream_5 : "🔮 **ʙᴀşʟɪᴋ**: {0}\n**👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ**:{1}"
+stream_6 : " **ʏᴀʏıɴ ʙᴀşʟᴀᴛıʟᴅı**  \n**ᴘᴀʀᴄ̧ᴀ**: [{0}]({1})\n**👉 ᴛᴀʟᴇᴘ ᴇᴅᴇɴ**: {2}"
 
 
 
