--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -258,12 +258,12 @@ S_B_7 : "ᴅᴇᴠᴇʟᴏᴘᴇʀ"
 S_B_8 : "ᴋᴏᴍᴜᴛʟᴀʀ ᴍᴇɴᴜ̈sᴜ̈"
 
 #Help 
-H_B_1 : "ᴀᴅᴍɪɴ ᴋᴏᴍᴜᴛʟᴀʀı"
-H_B_2 : "Oynatma Komutları"
-H_B_3 : "🤖 Bot Komutları"
-H_B_4 : "🎁 Ekstra Komutlar"
-H_B_5 : "💣 Menüyü Kapat"
-H_B_6 : "❤️‍🔥 Yetkili Komutları"
+H_B_1 : "💎 ᴀᴅᴍɪɴ ᴋᴏᴍᴜᴛʟᴀʀı"
+H_B_2 : "🎧 ᴏʏɴᴀᴛᴍᴀ ᴋᴏᴍᴜᴛʟᴀʀı"
+H_B_3 : "🤖 ʙᴏᴛ ᴋᴏᴍᴜᴛʟᴀʀı"
+H_B_4 : "🎁 ᴇᴋsᴛʀᴀ ᴋᴏᴍᴜᴛʟᴀʀ"
+H_B_5 : "💣 ᴍᴇɴᴜ̈ʏᴜ̈ ᴋᴀᴘᴀᴛ"
+H_B_6 : "🐙 sᴜᴅᴏ ᴋᴏᴍᴜᴛʟᴀʀı"
 
 #PlayMode
 PM_B_1 : "DirectPlay"
@@ -271,10 +271,10 @@ PM_B_2 : "InlineMarkup"
 PM_B_3 : "ChannelPlay"
 
 #Play
-P_B_1 : "🎵 Müziği Oynat"
-P_B_2 : "🎥 Videoyu Oynat"
-P_B_3 : "🏮 Canlı Yayını Oynat"
-P_B_4 : "🎵 Oynatma Listelerimi Oynat"
+P_B_1 : "🎵 ᴍᴜ̈ᴢɪɢ̆ɪ ᴏʏɴᴀᴛ"
+P_B_2 : "🎥 ᴠɪᴅᴇᴏʏᴜ ᴏʏɴᴀᴛ"
+P_B_3 : "🏮 ᴄᴀɴʟı ʏᴀʏıɴı ᴏʏɴᴀᴛ"
+P_B_4 : "🎵 ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪᴍɪ ᴏʏɴᴀᴛ"
 
 #Playlist
 PL_B_1 : "⚡ Oynatma listelerimi oynat"
