--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -277,22 +277,22 @@ P_B_3 : "🏮 ᴄᴀɴʟı ʏᴀʏıɴı ᴏʏɴᴀᴛ"
 P_B_4 : "🎵 ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪᴍɪ ᴏʏɴᴀᴛ"
 
 #Playlist
-PL_B_1 : "⚡ Oynatma listelerimi oynat"
-PL_B_2 : "✅ ʟɪ̇sᴛᴇᴍᴇ ᴇᴋʟᴇ"
-PL_B_3 : "⚙️ Kontrol Paneli"
-PL_B_4 : "📡 Oynatma Modu"
-PL_B_5 : "🔄 Tüm Listeyi Sil"
-PL_B_6 : "↗️ Oynatma Listesini Sil"
-PL_B_7 : "❗️ Evet Eminim Sil"
-PL_B_8 : "🔢 En Çok Oynatılan 10 Parçayı Dinle"
-PL_B_9 : "🤖 Botta En Çok Oynatılan 10 Parça"
-PL_B_10 : "🏘 Grupta En Çok Oynatılan 10 Parça"
-PL_B_11 : "👤 Sizin En Çok Oynattığınız 10 Parça"
+PL_B_1 : "⚡ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇʟᴇʀɪᴍɪ ᴏʏɴᴀᴛ"
+PL_B_2 : "✅ ʟɪsᴛᴇᴍᴇ ᴇᴋʟᴇ"
+PL_B_3 : "⚙️ ᴋᴏɴᴛʀᴏʟ ᴘᴀɴᴇʟɪ"
+PL_B_4 : "📡 ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ"
+PL_B_5 : "🔄 ᴛᴜ̈ᴍ ʟɪsᴛᴇʏɪ sɪʟ"
+PL_B_6 : "↗️ ᴏʏɴᴀᴛᴍᴀ ʟɪsᴛᴇsɪɴɪ sɪʟ"
+PL_B_7 : "❗️ ᴇᴠᴇᴛ ᴇᴍɪɴɪᴍ sɪʟ"
+PL_B_8 : "🔢 ᴇɴ ᴄ̧ᴏᴋ ᴏʏɴᴀᴛıʟᴀɴ 𝟷𝟶 ᴘᴀʀᴄ̧ᴀʏı ᴅɪɴʟᴇ"
+PL_B_9 : "🤖 ʙᴏᴛᴛᴀ ᴇɴ ᴄ̧ᴏᴋ ᴏʏɴᴀᴛıʟᴀɴ 𝟷𝟶 ᴘᴀʀᴄ̧ᴀ"
+PL_B_10 : "🏘 ɢʀᴜᴘᴛᴀ ᴇɴ ᴄ̧ᴏᴋ ᴏʏɴᴀᴛıʟᴀɴ 𝟷𝟶 ᴘᴀʀᴄ̧ᴀ"
+PL_B_11 : "👤 sɪᴢɪɴ ᴇɴ ᴄ̧ᴏᴋ ᴏʏɴᴀᴛᴛıɢ̆ıɴıᴢ 𝟷𝟶 ᴘᴀʀᴄ̧ᴀ"
 
 #Settings
-ST_B_1 : "🔊 Ses Kalitesi"
-ST_B_2 : "🎥 Video Kalitesi"
-ST_B_3 : "⚡️ Yetkili Kullanıcılar"
+ST_B_1 : "🔊 sᴇs ᴋᴀʟɪᴛᴇsɪ"
+ST_B_2 : "🎥 ᴠɪᴅᴇᴏ ᴋᴀʟɪᴛᴇsɪe"
+ST_B_3 : "⚡️ ʏᴇᴛᴋɪʟɪ ᴋᴜʟʟᴀɴıᴄıʟᴀʀ"
 ST_B_4 : "📱 Ana Panel"
 ST_B_5 : "▶️ Oynatma Ayarları"
 ST_B_6 : "🇹🇷 Diller 🇦🇿"
