--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -248,14 +248,14 @@ UNBAN_BUTTON : "ᴀsɪsᴛᴀɴ ʏᴀsᴀɢ̆ɪɴɪ ᴋᴀʟᴅɪʀ"
 L_B_1 : "şᴀʀᴋı sᴏ̈ᴢʟᴇʀɪɴɪ şɪᴍᴅɪ ᴋᴏɴᴛʀᴏʟ ᴇᴛ"
 
 # Start
-S_B_1 : "ᴋᴏᴍᴜᴛʟᴀʀ"
-S_B_2 : "ᴀʏᴀʀʟᴀʀ"
-S_B_3 : "ᴅᴇsᴛᴇᴋ ɢʀᴜʙᴜ"
-S_B_4 : "ᴅᴜʏᴜʀᴜ"
+S_B_1 : "🗒 ᴋᴏᴍᴜᴛʟᴀʀ"
+S_B_2 : "🔧 ᴀʏᴀʀʟᴀʀ"
+S_B_3 : "🎉 ᴅᴇsᴛᴇᴋ ɢʀᴜʙᴜ"
+S_B_4 : "🎩 ᴅᴜʏᴜʀᴜ"
 S_B_5 : "✚ ʙᴇɴɪ ɢʀᴜʙᴜɴᴀ ᴇᴋʟᴇ"
 S_B_6 : "ɢɪᴛ ʀᴇᴘᴏ"
-S_B_7 : "ᴅᴇᴠᴇʟᴏᴘᴇʀ"
-S_B_8 : "ᴋᴏᴍᴜᴛʟᴀʀ ᴍᴇɴᴜ̈sᴜ̈"
+S_B_7 : "❤️‍🔥 ᴅᴇᴠᴇʟᴏᴘᴇʀ"
+S_B_8 : "📚 ᴋᴏᴍᴜᴛʟᴀʀ ᴍᴇɴᴜ̈sᴜ̈"
 
 #Help 
 H_B_1 : "💎 ᴀᴅᴍɪɴ ᴋᴏᴍᴜᴛʟᴀʀı"
