--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -140,7 +140,7 @@ cplay_5 : "ʏᴀʟɴıᴢᴄᴀ ᴋᴀɴᴀʟʟᴀʀ ᴅᴇsᴛᴇᴋʟᴇɴɪʀ
 cplay_6 : "ᴋᴀɴᴀʟı ʙᴜ ɢʀᴜʙᴀ ʙᴀɢ̆ʟᴀᴍᴀᴋ ɪᴄ̧ɪɴ[{0}] ᴋᴀɴᴀʟıɴ **sᴀʜɪʙɪ** ᴏʟᴍᴀɴıᴢ ɢᴇʀᴇᴋɪʀ.\n**ᴋᴀɴᴀʟ sᴀʜɪʙɪ:** @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪғ ᴏʟᴀʀᴀᴋ ɢʀᴜʙᴜɴᴜᴢᴜ ᴏ ᴋᴀɴᴀʟᴀ ʙᴀɢ̆ʟᴀʏᴀʙɪʟɪʀsɪɴɪᴢ. ᴠᴇ ᴀʀᴅıɴᴅᴀɴ `/ᴄʜᴀɴɴᴇʟᴘʟᴀʏ ʙᴀɢ̆ʟᴀɴᴛıʟı ɪʟᴇ ʙᴀɢ̆ʟᴀɴᴍᴀʏı ᴅᴇɴᴇʏɪɴ.`"
 
 #Play
-play_1 : "🔮 **ᴍᴜ̈ᴢɪᴋ ɪ̇ɴᴅɪʀɪʟɪʏᴏʀ...**\n⏳ **ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ...**"
+play_1 : "🔮 **ᴍᴜ̈ᴢɪ̇ᴋ ɪ̇ɴᴅɪ̇ʀɪ̇ʟɪ̇ʏᴏʀ...**\n⏳ **ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪ̇ɴ...**"
 play_2 : "**🏷️ 🏷ᴋᴀɴᴀʟ ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ**\n🔮 sᴏʀɢᴜ ɪ̇şʟᴇɴɪʏᴏʀ... ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ...\n\n**ʙᴀɢ̆ʟı ᴋᴀɴᴀʟ:** {0}"
 play_3 : "sᴏʀɢᴜ ɪ̇şʟᴇɴᴇᴍᴇᴅɪ! ʙᴀşᴋᴀ ʙɪʀ ᴘᴀʀᴄ̧ᴀ ᴏʏɴᴀᴛᴍᴀʏı ᴅᴇɴᴇʏɪɴɪᴢ. 🪁"
 play_4 : "🖇 **ʏᴀʟɴıᴢᴄᴀ ʏᴏ̈ɴᴇᴛɪᴄɪʟᴇʀ ᴏʏɴᴀᴛıʀ**\nʏᴀʟɴıᴢᴄᴀ ʏᴏ̈ɴᴇᴛɪᴄɪʟᴇʀ ᴠᴇ ʏᴇᴛᴋɪʟᴇɴᴅɪʀɪʟᴍɪş ᴋᴜʟʟᴀɴıᴄıʟᴀʀ ʙᴜ ɢʀᴜᴘᴛᴀ ᴍᴜ̈ᴢɪᴋ ᴄ̧ᴀʟᴀʙɪʟɪʀ.\n\nᴍᴏᴅᴜ /ᴘʟᴀʏᴍᴏᴅᴇ ᴀʀᴀᴄıʟıɢ̆ıʏʟᴀ ᴅᴇɢ̆ɪşᴛɪʀɪɴ ᴠᴇ ᴢᴀᴛᴇɴ ʏᴏ̈ɴᴇᴛɪᴄɪʏsᴇɴɪᴢ, /ᴀᴅᴍɪɴᴄᴀᴄʜᴇ ᴀʀᴀᴄıʟıɢ̆ıʏʟᴀ ᴀᴅᴍɪɴᴄᴀᴄʜᴇ'ɪ ʏᴇɴɪᴅᴇɴ ʏᴜ̈ᴋʟᴇʏɪɴ."
