--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -349,32 +349,32 @@ sudo_6 : "\n💎<u> **sᴜᴅᴏ ᴋᴜʟʟᴀɴıᴄıʟᴀʀı:**</u>\n"
 sudo_7 : "sᴜᴅᴏ ᴋᴜʟʟᴀɴıᴄısı ʏᴏᴋ"
 
 #Block
-block_1 : "{0} bot tarafından zaten engellendi."
-block_2 : "Botun Engellenenler Listesine **{0}** eklendi. Kullanıcı artık hiçbir koşulda bot kullanamayacak.\n\nEngellenen kullanıcıları kontrol edin: /blockedusers"
-block_3 : "Kullanıcı zaten ücretsiz ve engellenmedi."
-block_4 : "Kullanıcı engelleme listesinden kaldırıldı. Kullanıcı artık bot kullanabilecek."
-block_5 : "Engellenen Kullanıcı Bulunamadı"
-block_6 : "Engellenen Kullanıcılar Listesi Alınıyor.. Lütfen Bekleyin. ❄️"
-block_7 : "**Engellenmiş kullanıcılar:**\n\n"
+block_1 : "{0} ʙᴏᴛ ᴛᴀʀᴀғıɴᴅᴀɴ ᴢᴀᴛᴇɴ ᴇɴɢᴇʟʟᴇɴᴅɪ."
+block_2 : "ʙᴏᴛᴜɴ ᴇɴɢᴇʟʟᴇɴᴇɴʟᴇʀ ʟɪsᴛᴇsɪɴᴇ **{0}** ᴇᴋʟᴇɴᴅɪ. ᴋᴜʟʟᴀɴıᴄı ᴀʀᴛıᴋ ʜɪᴄ̧ʙɪʀ ᴋᴏşᴜʟᴅᴀ ʙᴏᴛ ᴋᴜʟʟᴀɴᴀᴍᴀʏᴀᴄᴀᴋ.\n\nᴇɴɢᴇʟʟᴇɴᴇɴ ᴋᴜʟʟᴀɴıᴄıʟᴀʀı ᴋᴏɴᴛʀᴏʟ ᴇᴅɪɴ: /blockedusers"
+block_3 : "ᴋᴜʟʟᴀɴıᴄı ᴢᴀᴛᴇɴ sᴇʀʙᴇsᴛ ᴠᴇ ᴇɴɢᴇʟʟᴇɴᴍᴇᴅɪ."
+block_4 : "ᴋᴜʟʟᴀɴıᴄı ᴇɴɢᴇʟʟɪʟᴇʀ ʟɪsᴛᴇsɪɴᴅᴇɴ ᴋᴀʟᴅıʀıʟᴅı. ᴋᴜʟʟᴀɴıᴄı ᴀʀᴛıᴋ ʙᴏᴛ ᴋᴜʟʟᴀɴᴀʙɪʟᴇᴄᴇᴋ."
+block_5 : "ᴇɴɢᴇʟʟᴇɴᴇɴ ᴋᴜʟʟᴀɴıᴄı ʙᴜʟᴜɴᴀᴍᴀᴅı."
+block_6 : "ᴇɴɢᴇʟʟᴇɴᴇɴ ᴋᴜʟʟᴀɴıᴄıʟᴀʀ ʟɪsᴛᴇsɪ ᴀʟıɴıʏᴏʀ.. ʟᴜ̈ᴛғᴇɴ ʙᴇᴋʟᴇʏɪɴ... ⏳"
+block_7 : "**ᴇɴɢᴇʟʟᴇɴᴍɪş ᴋᴜʟʟᴀɴıᴄıʟᴀʀ:**\n\n"
 
 #Blacklist Chats
-black_1 : "**Kullanım:**\n/blacklistchat [CHAT_ID]"
-black_2 : "Sohbet zaten kara listeye alındı."
-black_3 : "Sohbet başarıyla kara listeye alındı"
-black_4 : "**Kullanım:**\n/whitelistchat [CHAT_ID]"
-black_5 : "Sohbet zaten beyaz listede."
-black_6 : "Sohbet başarıyla beyaz listeye alındı"
-black_7 : "**Kara Listeye Alınmış Sohbetler:**\n\n"
-black_8 : "Kara Listeye Alınmış Sohbet Yok"
+black_1 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/blacklistchat [ᴄʜᴀᴛ_ɪᴅ]"
+black_2 : "sᴏʜʙᴇᴛ ᴢᴀᴛᴇɴ ᴋᴀʀᴀ ʟɪsᴛᴇʏᴇ ᴀʟıɴᴅı 🤔"
+black_3 : "sᴏʜʙᴇᴛ ʙᴀşᴀʀıʏʟᴀ ᴋᴀʀᴀ ʟɪsᴛᴇʏᴇ ᴀʟıɴᴅı ✅"
+black_4 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/whitelistchat [ᴄʜᴀᴛ_ɪᴅ]"
+black_5 : "sᴏʜʙᴇᴛ ᴢᴀᴛᴇɴ ʙᴇʏᴀᴢ ʟɪsᴛᴇᴅᴇ 🤔"
+black_6 : "sᴏʜʙᴇᴛ ʙᴀşᴀʀıʏʟᴀ ʙᴇʏᴀᴢ ʟɪsᴛᴇʏᴇ ᴀʟıɴᴅı ✅"
+black_7 : "**ᴋᴀʀᴀ ʟɪsᴛᴇʏᴇ ᴀʟıɴᴍış sᴏʜʙᴇᴛʟᴇʀ:**\n\n"
+black_8 : "ᴋᴀʀᴀ ʟɪsᴛᴇʏᴇ ᴀʟıɴᴍış sᴏʜʙᴇᴛ ʏᴏᴋ"
 
 #videolimit
-vid_1 : "**Kullanım:**\n/set_video_limit veya /videolimit [İzin verilen sohbet sayısı] veya [Disable]"
-vid_2 : "Lütfen Limiti Ayarlamak için Sayısal Rakamlar Kullanın."
-vid_3 : "Görüntülü Görüşmelerin Maksimum Sınırı, {0} Sohbet İçin Tanımlandı."
-vid_4 : "Görüntülü Görüşmeler Devre Dışı"
+vid_1 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/set_video_limit ᴠᴇʏᴀ /videolimit [ɪ̇ᴢɪɴ ᴠᴇʀɪʟᴇɴ sᴏʜʙᴇᴛ sᴀʏısı] ᴠᴇʏᴀ [ᴅɪsᴀʙʟᴇ]"
+vid_2 : "ʟᴜ̈ᴛғᴇɴ ʟɪᴍɪᴛɪ ᴀʏᴀʀʟᴀᴍᴀᴋ ɪᴄ̧ɪɴ sᴀʏısᴀʟ ʀᴀᴋᴀᴍʟᴀʀ ᴋᴜʟʟᴀɴıɴ."
+vid_3 : "ɢᴏ̈ʀᴜ̈ɴᴛᴜ̈ʟᴜ̈ ɢᴏ̈ʀᴜ̈şᴍᴇʟᴇʀɪɴ ᴍᴀᴋsɪᴍᴜᴍ sıɴıʀı, {0} ʙᴏᴛ ɪ̇ᴄ̧ɪ̇ɴ ᴛᴀɴıᴍʟᴀɴᴅı."
+vid_4 : "ɢᴏ̈ʀᴜ̈ɴᴛᴜ̈ʟᴜ̈ ɢᴏ̈ʀᴜ̈şᴍᴇʟᴇʀ ᴅᴇᴠʀᴇ ᴅışı."
 
 #maintenance
-maint_1 : "**Kullanım:**\n/maintenance [enable|disable]"
+maint_1 : "**ᴋᴜʟʟᴀɴıᴍ:**\n/maintenance [ᴇɴᴀʙʟᴇ / ᴅɪsᴀʙʟᴇ]"
 maint_2 : "Bakım için Etkinleştirildi ✨"
 maint_3 : "Bakım Modu Devre Dışı"
 
