--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -390,15 +390,15 @@ vidmode_2 : "ᴠɪᴅᴇᴏ ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ, ɪɴᴅɪʀɪᴄɪ
 vidmode_3 : "ᴠɪᴅᴇᴏ ᴏʏɴᴀᴛᴍᴀ ᴍᴏᴅᴜ ᴍ𝟹ᴜ𝟾 ᴏʟᴀʀᴀᴋ ᴀʏᴀʀʟᴀɴᴅı. ʙᴏᴛ şɪᴍᴅɪ ᴘᴀʀᴄ̧ᴀʟᴀʀı ᴄᴀɴʟı ᴏʟᴀʀᴀᴋ ᴄ̧ᴀʟᴀᴄᴀᴋ."
 
 #broadcast
-broad_1 : "**Bottan {1} Pinli {0} Sohbette Yayınlanan Mesaj. 🔮**"
-broad_2 : "Asistan Yayını Başlatıldı...🥀"
-broad_3 : "**Yardımcı Yayın:**\n\n"
-broad_4 : "Asistan 1, {0} sohbette yayınlandı\n"
-broad_5 : "Asistan 2, {0} sohbette yayınlandı\n"
-broad_6 : "Asistan 3, {0} sohbette yayınlandı\n"
-broad_7 : "Asistan 4, {0} sohbette yayınlandı\n"
-broad_8 : "Asistan 5, {0} sohbette yayınlandı\n"
-broad_9 : "**Kullanım**:\n/broadcast [Mesaj] veya [Bir Mesajı Yanıtla]"
+broad_1 : "**ʙᴏᴛᴛᴀɴ {1} ᴘɪɴʟɪ {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴀɴ ᴍᴇsᴀᴊ. ✅**"
+broad_2 : "ᴀsɪsᴛᴀɴ ʏᴀʏıɴı ʙᴀşʟᴀᴛıʟᴅı... ✅"
+broad_3 : "**ʏᴀʀᴅıᴍᴄı ʏᴀʏıɴ:**\n\n"
+broad_4 : "ᴀsɪsᴛᴀɴ 1, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
+broad_5 : "ᴀsɪsᴛᴀɴ 2, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
+broad_6 : "ᴀsɪsᴛᴀɴ 3, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
+broad_7 : "ᴀsɪsᴛᴀɴ 4, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
+broad_8 : "ᴀsɪsᴛᴀɴ 5, {0} sᴏʜʙᴇᴛᴛᴇ ʏᴀʏıɴʟᴀɴᴅı\n"
+broad_9 : "**ᴋᴜʟʟᴀɴıᴍ**:\n/broadcast [Mesaj] veya [Bir Mesajı Yanıtla]"
 broad_10 : "Lütfen yayınlamak için biraz metin sağlayın."
 broad_11 : "**{0} Kullanıcıya Yayınlanan Mesaj.**"
 
